@@ -20,6 +20,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.model.Resource;
@@ -165,7 +166,7 @@ class HealthEndpointWebExtensionConfiguration {
 				.createEndpointResources(mapping, Collections.singletonList(this.endpoint), null, null, false)
 				.stream()
 				.filter(Objects::nonNull)
-				.toList();
+				.collect(Collectors.toList());
 			register(endpointResources, config);
 		}
 
